--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div id="home" class="content">
       <section class="hero">
-        <img class="img-circle" src="../images/img.jpeg" />
+        <img class="img-circle" src="/images/img.jpeg" />
         <div class="hero-content">
           <h1>Himanshu Sachan</h1>
           <p>ML AI Enthusiast | Competitive Programmer</p>
