updated skills ,info and acheivements

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="sidebar">
       <nav>
         <ul>
-          <li><a href="#home">Home</a></li>
+          <li class="active"><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#achievements">Achievements</a></li>
@@ -19,12 +19,14 @@
         </ul>
       </nav>
     </div>
-    <div id="home" class="content">
+    <section>
+    <div id="home" class="con tent">
       <section class="hero">
-        <img class="img-circle" src="/images/img.jpeg" />
+        <img class="img-circle" src="https://github.com/h01sachan/Portfolio/blob/master/image/img.jpeg" />
         <div class="hero-content">
-          <h1>Himanshu Sachan</h1>
-          <p>ML AI Enthusiast | Competitive Programmer</p>
+          <p class="main_name">Himanshu Sachan</p>
+          <p>ML AI Enthusiast || Competitive Programmer || Cyperpunk</p>
+    
         </div>
       </section>
     </div>
@@ -37,32 +39,82 @@
     </p>
   </div>
  
-  <div id="skills">
+  <div class="skill_1" id="skills">
     <h1>SKILLS</h1>
+    <div class="animate">
     <ul>
-      <li>C++,python</li>
-      <li>Competitive Programming in c++</li>
-      <li>Designer</li>
+      <li class="lang">C++ and python</li>
+      <li class="cp">Competitive Programming in c++</li>
+      <li class="designer">Designer</li>
+      <li class="developer">Developer</li>
     </ul>
+    </div>
   </div>
   
   <div id="achievements">
-    <h1>ACHIVEMENTS</h1>
-    <ul>
-      <li>6 star on <a href="https://www.hackerrank.com/sachan_himanshu1">hackerrank</a> 
-      </li>
-
-      <li>1301 rating on <a href="https://codeforces.com/profile/hs001">codeforces</a></li>
-      <li>1721 (3 star) on <a href="https://www.codechef.com/users/hs001">codechef</a></li>
-    </ul>
+    <div class="wrapper">
+      <h1>COMPETITIVE PROGRAMMING INFO</h1>
+      <div class="team">
+        <div class="team_member">
+          <div class="team_img">
+            <img src="image/Codeforce.jpg" alt="Team_image">
+          </div>
+          <h3>CODEFORCES</h3>
+          <p class="role">hs001</p>
+          <ul>
+            <li>Language:C++/Python</li>
+            <br>
+            <li>Highest Rating:1369</li>
+            <br>
+            <li>Current Rating:1301(pupil)</li>
+            <br>
+          </ul>
+        </div>
+        <div class="team_member">
+          <div class="team_img">
+            <img src="image/large.jpg" alt="Team_image">
+          </div>
+          <h3>CODECHEF</h3>
+          <p class="role">HS001</p>
+          <ul>
+            <li>Language:C++/Python</li>
+            <br>
+            <li>Highest Rating:1799</li>
+            <br>
+            <li>Current Rating:1799(3 star)</li>
+            <br>
+          </ul></div>
+        <div class="team_member">
+          <div class="team_img">
+            <img src="image/10049c76-b081-451a-a7a9-6f66a98575cb.jpg" alt="Team_image">
+          </div>
+          <h3>HACKERRANK</h3>
+          <p class="role">SACHAN_HIMANSHU1</p>
+          <ul>
+            <li>Language:C++/Python</li>
+            <br>
+            <li>Problem solving: 6 star</li>
+            <br>  
+            <li>C++ proficiency: 5 star</li>
+            <br>
+          </ul>
+        </div>
+      </div>
+    </div>
   </div>
-  
+  <br><br><br><br>
   <div id="contacts">
+    
     <h1>Contacts</h1>
-    <p>EMAIL: sachan.himanshu2001@gmail.com</p>
+    <div class="contact_centre">
+    <p>EMAIL:sachan.himanshu2001@gmail.com</p>
+    <br>
     <p>CONATCT NO. 9571460194</p>
   </div>
-  <h1>Connect Me On</h1>
+  </div>
+  <br>
+  <h1 class="connect">Connect Me On</h1>
+</section>
   <div class="footer">
     <footer>
       <ul>
