--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script src="https://use.fontawesome.com/d1341f9b7a.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>Portfolio</title>
   </head>
@@ -20,9 +19,9 @@
       </nav>
     </div>
     <section>
-    <div id="home" class="con tent">
+    <div id="home" class="content">
       <section class="hero">
-        <img class="img-circle" src="https://github.com/h01sachan/Portfolio/blob/master/image/img.jpeg" />
+        <img class="img-circle" src="image\img.jpeg" />
         <div class="hero-content">
           <p class="main_name">Himanshu Sachan</p>
           <p>ML AI Enthusiast || Competitive Programmer || Cyperpunk</p>
@@ -57,10 +56,10 @@
       <div class="team">
         <div class="team_member">
           <div class="team_img">
-            <img src="image/Codeforce.jpg" alt="Team_image">
+            <img src="image\codeforce.jpg" alt="Team_image">
           </div>
           <h3>CODEFORCES</h3>
-          <p class="role">hs001</p>
+          <p class="role"><a href="https://codeforces.com/profile/hs001">hs001</a>  </p>
           <ul>
             <li>Language:C++/Python</li>
             <br>
@@ -75,7 +74,7 @@
             <img src="image/large.jpg" alt="Team_image">
           </div>
           <h3>CODECHEF</h3>
-          <p class="role">HS001</p>
+          <p class="role"><a href="https://www.codechef.com/users/hs001">HS001</a></p>
           <ul>
             <li>Language:C++/Python</li>
             <br>
@@ -89,7 +88,7 @@
             <img src="image/10049c76-b081-451a-a7a9-6f66a98575cb.jpg" alt="Team_image">
           </div>
           <h3>HACKERRANK</h3>
-          <p class="role">SACHAN_HIMANSHU1</p>
+          <p class="role"><a href="https://www.hackerrank.com/sachan_himanshu1">SACHAN_HIMANSHU1</a></p>
           <ul>
             <li>Language:C++/Python</li>
             <br>
