--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <section class="hero">
         <img class="img-circle" src="image\img.jpeg" />
         <div class="hero-content">
-          <p class="main_name">Himanshu Sachan</p>
+          <h1> Himanshu Sachan <span></span></h1>
           <p>ML AI Enthusiast || Competitive Programmer || Cyperpunk</p>
     
         </div>
@@ -32,10 +32,16 @@
   </div>
   
   <div id="about">
-    <h1>ABOUT ME</h1>
-    <p>
-      My name is Himanshu. I am a passionate competitive Programmer. I live in Kanpur ,India.Currently ,i'm pursuing btech in the department of computer science.I'm passionate ,ambitious and self driven.I set up goals for myself and always look forward to learn new things.I love playing football and chess more than that i love watching football games.
-    </p>
+    <div class="about-us">
+      <div class="inner-section">
+        <h1>About Me</h1>
+        <p class="text">
+          My name is Himanshu. I am a passionate competitive Programmer. I live in Kanpur ,India. Currently ,I'm pursuing btech in the department of computer science and information technology. I'm passionate ,ambitious and self driven.I set up goals for myself and always look forward to learn new things.I love playing football and chess more than that i love watching football games.</p>
+        <div class="my-skills">
+          <button>Hire Me</button>
+        </div>
+      </div>
+    </div>
   </div>
  
   <div class="skill_1" id="skills">
@@ -100,8 +106,7 @@
         </div>
       </div>
     </div>
-  </div>
-  <br><br><br><br>
+  </div> 
   <div id="contacts">
     
     <h1>Contacts</h1>
@@ -109,8 +114,7 @@
     <p>EMAIL:sachan.himanshu2001@gmail.com</p>
     <br>
     <p>CONATCT NO. 9571460194</p>
-  </div>
-  </div>
+    </div>
   <br>
   <h1 class="connect">Connect Me On</h1>
 </section>
@@ -124,6 +128,7 @@
       </ul>
     </footer>
   </div>
+</div>
 </body>
 </html>
 
