--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
         <div class="team_member">
           <div class="team_img">
-            <img src="image/large.jpg" alt="Team_image">
+            <img src="image\large.jpg" alt="Team_image">
           </div>
           <h3>CODECHEF</h3>
           <p class="role"><a href="https://www.codechef.com/users/hs001">HS001</a></p>
@@ -91,7 +91,7 @@
           </ul></div>
         <div class="team_member">
           <div class="team_img">
-            <img src="image/10049c76-b081-451a-a7a9-6f66a98575cb.jpg" alt="Team_image">
+            <img src="image\10049c76-b081-451a-a7a9-6f66a98575cb.jpg" alt="Team_image">
           </div>
           <h3>HACKERRANK</h3>
           <p class="role"><a href="https://www.hackerrank.com/sachan_himanshu1">SACHAN_HIMANSHU1</a></p>
